[gd_scene load_steps=4 format=3 uid="uid://cwf7a2x0e5ovt"]

[ext_resource type="Texture2D" uid="uid://bahv5ngk4amc5" path="res://graphics/player/player.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://74hbewg5h2w5" path="res://scenes/player/player.gd" id="1_dovo2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 64.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_dovo2")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(40, -2)
rotation = 1.5708
texture = ExtResource("1_8afob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, -2)
shape = SubResource("CircleShape2D_dovo2")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(150, 18)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(144, 9)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(144, 26)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
